# Qt-duping-shapes

./: CMakeLists.txt  DupingShapeDelegate.qml  Qt-duping-shapes_en_US.ts  Qt-duping-shapes_ru_RU.ts  README.md  duplicatingshape.cpp  duplicatingshape.h  duplicatingshapesmodel.cpp  duplicatingshapesmodel.h  main.cpp  qml.qrc
components/: DupingShapeDelegate.qml  TextSpinbox.qml
forms/: SettingsDialog.qml  main.qml
